--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -4,24 +4,24 @@
     
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: 15% repeat(6,1fr);
     justify-items: center;
-    background-color: conf.$secundary-light-color;
+    background-color: var(--secondary-light-color);
 
 
     .p-about{
-        grid-column: 1 / 2;
-        grid-row: 3 / 5;
+        grid-row: 4 / 6;
+        grid-column: 1 / 3;
         width: 80%;
-        font-size: conf.fontSize(font-body);
-        justify-self: end;
+        font-size: 3.5vw;
+        justify-self: center;
         margin-top: 3vw;
         height: 200px;
     }
 
     .card-profile{
-        grid-column: 2 / 3;
-        grid-row: 3 / 5;       
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;      
         align-self: center;
 
         display: flex;
@@ -41,7 +41,7 @@
             padding: 0.4em;
             border-radius: 0.5em;
             font-size: calc(0.7em + 1vw);
-            color: conf.$primary-color;
+            color: var(--primary-color);
             z-index: 5;
             margin-right: 100%;
             white-space: nowrap;
@@ -49,21 +49,24 @@
             animation: typewriter 1s steps(50) 1 normal both;
         }
 
-
+        .b-img {display: none;}
+        .p-animation{display: none; animation-iteration-count: 0;}
+        
         .rrss{
+            grid-column: 2;
             display: flex;
             gap: 1em;
             z-index: 4;
         }
 
         img.git{
-            width: calc(1em + 3vw);
-            height: calc(1em + 3vw);
+            width: calc(1.5em + 3vw);
+            height: calc(1.5em + 3vw);
         }
 
         img.lin{
-            width: calc(1em + 3vw);
-            height: calc(1em + 3vw);
+            width: calc(1.5em + 3vw);
+            height: calc(1.5em + 3vw);
         }
 
         img{
