--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,6 @@
 @use "config" as conf;
 
+
 * {
     margin: 0;
     padding: 0;
@@ -41,7 +42,7 @@ main {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     align-self: center;
-    
+    margin-bottom: 1em;
 
     width: 60%;
     display: flex;
@@ -78,7 +79,7 @@ main {
 }
 
 
-@include conf.mobile{
+/* @include conf.mobile{
 
     //Home
     .home{
@@ -249,7 +250,7 @@ main {
     }
 }
 
-
+ */
 
 
 
