--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,23 +1,22 @@
 @use "config" as conf;
 
 .projects {
-    background-color: conf.$secundary-light-color;
-
+  
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: 15% repeat(9,1fr);
     justify-items: center;
-   
+    background-color: var(--secondary-light-color);
+
     .swiper-projects {
         grid-column: 1 / 3;
-        grid-row: 3 / 5;
-        margin-top: 6em;
+        grid-row: 4 / 6;
         margin-bottom: 2em;
-        max-width: 400px;
+        max-width: 200px;
         overflow: visible;
 
         .swiper-slide {
-            min-height: 180px;
+            min-height: 200px;
             text-align: center;
             font-size: 18px;
             display: flex;
@@ -27,8 +26,8 @@
             transition: all .3s ease;
             
             &.swiper-slide-active {
-              color:#fff;
-              background-color: conf.$primary-color;
+              color:var(--white);
+              background-color: var(--primary-color);
               transform: scale(1.4);
               z-index: 2
             }
@@ -41,7 +40,7 @@
             margin-left: 38%;
             padding: 2em;
             border-radius: 0.5em;
-            background-color: conf.$acento-color;
+            background-color: var(--acent-color);
         }
         
         .swiper-button-prev{
@@ -53,7 +52,10 @@
             left: 14%;
             color: rgb(255, 255, 255);
         }
-        
+        .swiper-button-next, 
+        .swiper-button-prev{
+            display: none;
+        }
           
       }
     
