--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -3,23 +3,22 @@
 .skills {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: 15% repeat(6,1fr);
     justify-items: center;
-    background-color: conf.$secundary-color;
+    background-color: var(--secondary-color);
 
     img{
-        grid-column: 2 / 3;
-        grid-row: 2 / 5;
-        width: calc(12em + 27vw);
-        justify-self: start;
-        
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        width: 80%;
+        justify-self: center;
+        margin-top: 3em;
     }
 
     .p-skills{
-        margin-top: 2vw;
-        grid-column: 1 / 2;
+        grid-column: 1 / 3;
         grid-row: 3 / 5;
-        width: 60%;
+        width: 76%;
         font-size: conf.fontSize(font-body);
     }
 
@@ -37,6 +36,6 @@
         
     }
 
-    
+    .interests{display: none;}
 
 }
