--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     color:var(--white);
-    background-color: conf.$secundary-color;
+    background-color: var(--secondary-color);
     text-align: center;
 
     
