--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -3,9 +3,9 @@
 .swiper-pagination{
 
     width: 3%;
-    left: 3%; 
-    margin-top: 14em; 
-    
+    left: 3%;  
+    margin-top: 65vw;
+
     .swiper-pagination-bullet {
         
         width: 3.5vw;
