--- a/css/mobile.css
+++ b/css/mobile.css
@@ -81,7 +81,7 @@ header .nav.show {
   justify-content: center;
   align-items: center;
   color: var(--white);
-  background-color: #454545;
+  background-color: var(--secondary-color);
   text-align: center;
 }
 .home .arrow {
@@ -155,7 +155,7 @@ header .nav.show {
 .about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 15% repeat(6, 1fr);
+  grid-template-rows: 90px repeat(6, 1fr);
   justify-items: center;
   background-color: var(--secondary-light-color);
 }
@@ -163,7 +163,7 @@ header .nav.show {
   grid-row: 4/6;
   grid-column: 1/3;
   width: 80%;
-  font-size: 3.5vw;
+  font-size: calc(0.6em + 0.7vw);
   justify-self: center;
   margin-top: 3vw;
   height: 200px;
@@ -179,22 +179,6 @@ header .nav.show {
 }
 .about .card-profile .saludo {
   display: none;
-}
-.about .card-profile .p-animation {
-  display: inline;
-  background-color: #B4B4B4;
-  text-align: center;
-  width: 70%;
-  padding: 0.4em;
-  border-radius: 0.5em;
-  font-size: calc(0.7em + 1vw);
-  color: var(--primary-color);
-  z-index: 5;
-  margin-right: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  -webkit-animation: typewriter 1s steps(50) 1 normal both;
-          animation: typewriter 1s steps(50) 1 normal both;
 }
 .about .card-profile .b-img {
   display: none;
@@ -223,33 +207,11 @@ header .nav.show {
   height: calc(5em + 17vw);
   z-index: 5;
 }
-.about .card-profile .b-img {
-  position: absolute;
-  width: calc(6em + 28vw);
-  height: calc(7em + 28vw);
-  z-index: 0;
-}
-@-webkit-keyframes typewriter {
-  from {
-    width: 0;
-  }
-  to {
-    width: 75%;
-  }
-}
-@keyframes typewriter {
-  from {
-    width: 0;
-  }
-  to {
-    width: 75%;
-  }
-}
 
 .skills {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 15% repeat(6, 1fr);
+  grid-template-rows: 90px repeat(6, 1fr);
   justify-items: center;
   background-color: var(--secondary-color);
 }
@@ -264,19 +226,7 @@ header .nav.show {
   grid-column: 1/3;
   grid-row: 3/5;
   width: 76%;
-  font-size: 3.5vw;
-}
-.skills .interests {
-  grid-column: 1/2;
-  grid-row: 5/6;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  font-size: 3.5vw;
-  font-family: "Khmer";
-  background-color: #21B1A7;
-  border-radius: 10px;
-  padding: 2% 20% 2% 5%;
+  font-size: calc(0.6em + 0.7vw);
 }
 .skills .interests {
   display: none;
@@ -285,17 +235,15 @@ header .nav.show {
 .projects {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 15% repeat(9, 1fr);
+  grid-template-rows: 90px repeat(9, 1fr);
   justify-items: center;
   background-color: var(--secondary-light-color);
 }
 .projects .swiper-projects {
   grid-column: 1/3;
   grid-row: 4/6;
-  margin-bottom: 2em;
   max-width: 200px;
   overflow: visible;
-  /* ARROWS */
 }
 .projects .swiper-projects .swiper-slide {
   min-height: 200px;
@@ -304,7 +252,7 @@ header .nav.show {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: white;
+  background: var(--white);
   transition: all 0.3s ease;
 }
 .projects .swiper-projects .swiper-slide.swiper-slide-active {
@@ -315,29 +263,13 @@ header .nav.show {
 }
 .projects .swiper-projects .swiper-button-next,
 .projects .swiper-projects .swiper-button-prev {
-  margin-top: 17%;
-  margin-left: 38%;
-  padding: 2em;
-  border-radius: 0.5em;
-  background-color: var(--acent-color);
-}
-.projects .swiper-projects .swiper-button-prev {
-  left: 6%;
-  color: rgb(255, 255, 255);
-}
-.projects .swiper-projects .swiper-button-next {
-  left: 14%;
-  color: rgb(255, 255, 255);
-}
-.projects .swiper-projects .swiper-button-next,
-.projects .swiper-projects .swiper-button-prev {
   display: none;
 }
 
 .contact {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 15% repeat(6, 1fr);
+  grid-template-rows: 90px repeat(6, 1fr);
   justify-items: center;
   background-color: var(--secondary-color);
 }
@@ -345,15 +277,7 @@ header .nav.show {
   grid-column: 1/3;
   grid-row: 3;
   width: 75%;
-  font-size: 3.5vw;
-}
-.contact img {
-  position: absolute;
-  top: 16%;
-  right: 4%;
-  width: 45vw;
-  height: 80vh;
-  z-index: -1;
+  font-size: calc(0.6em + 0.7vw);
 }
 .contact img {
   display: none;
@@ -374,18 +298,18 @@ header .nav.show {
 }
 .contact form input::-moz-placeholder, .contact form textarea::-moz-placeholder {
   font-size: calc(0.9em + 0.2vw);
-  font-family: "Khmer";
+  font-family: "Noto Sans Khmer";
   color: rgb(191, 191, 191);
 }
 .contact form input:-ms-input-placeholder, .contact form textarea:-ms-input-placeholder {
   font-size: calc(0.9em + 0.2vw);
-  font-family: "Khmer";
+  font-family: "Noto Sans Khmer";
   color: rgb(191, 191, 191);
 }
 .contact form input::placeholder,
 .contact form textarea::placeholder {
   font-size: calc(0.9em + 0.2vw);
-  font-family: "Khmer";
+  font-family: "Noto Sans Khmer";
   color: rgb(191, 191, 191);
 }
 .contact form input.subject {
@@ -402,8 +326,8 @@ header .nav.show {
 }
 .contact form input,
 .contact form textarea {
-  font-size: 3.5vw;
-  font-family: "Khmer";
+  font-size: calc(0.6em + 0.7vw);
+  font-family: "Noto Sans Khmer";
   padding: 1em 1em 1em 1em;
   border-radius: 0.4em;
   border: 1.5px solid var(--acent-color);
@@ -412,7 +336,7 @@ header .nav.show {
   border: 0;
   font-size: calc(0.6em + 0.6vw);
   color: var(--white);
-  font-family: "Khmer";
+  font-family: "Noto Sans Khmer";
   background-color: var(--acent-color);
   border-radius: 0.4em;
   width: 25%;
@@ -425,7 +349,7 @@ header .nav.show {
   display: flex;
   flex-direction: column;
   gap: 1em;
-  font-size: 0.6em;
+  font-size: calc(0.5em + 0.5vw);
   align-self: center;
   width: 74%;
 }
@@ -439,7 +363,7 @@ header .nav.show {
 .swiper-pagination {
   width: 3%;
   left: 3%;
-  margin-top: 14em;
+  margin-top: 65vw;
 }
 .swiper-pagination .swiper-pagination-bullet {
   width: 3.5vw;
@@ -473,7 +397,7 @@ body {
   color: white;
   overflow-y: hidden;
   overflow-x: hidden;
-  font-family: "Khmer Light";
+  font-family: "Noto Sans Khmer Light";
 }
 
 main {
