--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -4,7 +4,7 @@
     
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 15% repeat(6,1fr);
+    grid-template-rows: 90px repeat(6,1fr);
     justify-items: center;
     background-color: var(--secondary-light-color);
 
@@ -13,7 +13,7 @@
         grid-row: 4 / 6;
         grid-column: 1 / 3;
         width: 80%;
-        font-size: 3.5vw;
+        font-size: conf.fontSize(font-body);
         justify-self: center;
         margin-top: 3vw;
         height: 200px;
@@ -31,22 +31,6 @@
 
         .saludo{
            display: none;
-        }
-
-        .p-animation{
-            display: inline;
-            background-color: #B4B4B4;
-            text-align: center;
-            width: 70%;
-            padding: 0.4em;
-            border-radius: 0.5em;
-            font-size: calc(0.7em + 1vw);
-            color: var(--primary-color);
-            z-index: 5;
-            margin-right: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            animation: typewriter 1s steps(50) 1 normal both;
         }
 
         .b-img {display: none;}
@@ -75,25 +59,8 @@
             z-index: 5;
         }
 
-        .b-img {
-            position: absolute;
-            width: calc(6em + 28vw);
-            height: calc(7em + 28vw);
-            z-index: 0;
-        }
-
         
     }
-
-    @keyframes typewriter {
-        from {
-          width: 0;
-        }
-        
-        to {
-          width: 75%;
-        }
-      }
 
 }
 
