--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -4,14 +4,13 @@
   
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 15% repeat(9,1fr);
+    grid-template-rows: 90px repeat(9,1fr);
     justify-items: center;
     background-color: var(--secondary-light-color);
 
     .swiper-projects {
         grid-column: 1 / 3;
         grid-row: 4 / 6;
-        margin-bottom: 2em;
         max-width: 200px;
         overflow: visible;
 
@@ -22,36 +21,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: white;
+            background: var(--white);
             transition: all .3s ease;
             
             &.swiper-slide-active {
-              color:var(--white);
+              color: var(--white);
               background-color: var(--primary-color);
               transform: scale(1.4);
               z-index: 2
             }
           }
          
-        /* ARROWS */
-        .swiper-button-next, 
-        .swiper-button-prev{
-            margin-top: 17%;
-            margin-left: 38%;
-            padding: 2em;
-            border-radius: 0.5em;
-            background-color: var(--acent-color);
-        }
-        
-        .swiper-button-prev{
-            left: 6%;
-            color: rgb(255, 255, 255);
-        }
-        .swiper-button-next {
-            
-            left: 14%;
-            color: rgb(255, 255, 255);
-        }
         .swiper-button-next, 
         .swiper-button-prev{
             display: none;
