--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -3,7 +3,7 @@
 .skills {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 15% repeat(6,1fr);
+    grid-template-rows: 90px repeat(6,1fr);
     justify-items: center;
     background-color: var(--secondary-color);
 
@@ -20,20 +20,6 @@
         grid-row: 3 / 5;
         width: 76%;
         font-size: conf.fontSize(font-body);
-    }
-
-    .interests{
-        grid-column: 1 / 2;
-        grid-row: 5 / 6;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        font-size: conf.fontSize(font-body);
-        font-family: conf.fontFamily(khmer);
-        background-color: #21B1A7;
-        border-radius: 10px;
-        padding: 2% 20% 2% 5%;
-        
     }
 
     .interests{display: none;}
